fix login sequence + autocomplete

--- a/app/views/admin/site/_git.html.erb
+++ b/app/views/admin/site/_git.html.erb
@@ -1,4 +1,4 @@
-<p>Course materials will be downloaded from this git repository.</p>
+<p class="text-center">Course materials will be downloaded from this git repository.</p>
 
 <% if Settings.git_repo.present? %>
 <p><%= Settings.git_repo %> @ <%= Settings.git_branch %></p>
