--- a/app/views/welcome/clone.html.erb
+++ b/app/views/welcome/clone.html.erb
@@ -1,4 +1,7 @@
-<div class="m-5 bg-light p-5 rounded shadow">
-	<h1>Set git repo</h1>
-	<%= render partial: 'admin/site/git' %>
+<div style="width: 600px" class='form-horizontal mx-auto m-5 bg-white p-4 rounded shadow'>
+    <h1 class="text-center">
+        <%= bootstrap_icon 'cloud-arrow-down', width: 60, height: 60 %>
+        Set git repo
+    </h1>
+    <%= render partial: 'admin/site/git' %>
 </div>
