add mail not login check

--- a/app/views/auth/mail/login.html.erb
+++ b/app/views/auth/mail/login.html.erb
@@ -5,6 +5,10 @@
     <%= t('account.login_mail') %>
 </h1>
 
+<% if flash[:alert] %>
+<p><%= flash[:alert] %></p>
+<% end %>
+
 <input name="email" type="email" autofocus required class="form-control my-5 border-0 border-bottom" placeholder="<%= t('account.email_placeholder') %>">
 
 <div class="d-flex justify-content-between">
