form cache on any change

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -8,7 +8,7 @@
         {
             controller: "form-cache",
             form_cache_target: "form",
-            action: "change->form-cache#saveToLocalStorage submit->form-cache#clearLocalStorage"
+            action: "input->form-cache#saveToLocalStorage submit->form-cache#clearLocalStorage"
         }
     }
     ) do %>
