--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -14,6 +14,7 @@
     ) do %>
 
 <% if @submit || (@page.pset && Submit.available? && logged_in?) %>
+<%= hidden_field_tag :pset_id, @page.pset.id if @page.pset if @allow_submit %>
 <div id="submit-button">
     <button class="btn btn-primary" type="button" onclick="window.scrollTo(0,document.body.scrollHeight);">
     <% if @submit && @submit.submitted_at %>
@@ -25,18 +26,20 @@
 </div>
 <% end %>
 
+<% @subpages.each_with_index do |subpage, index| %>
 <div id="content">
-    <%= hidden_field_tag :pset_id, @page.pset.id if @page.pset if @allow_submit %>
-
-    <% @subpages.each_with_index do |subpage, index| %>
     <section class="markdown" id="<%= subpage.slug %>-content">
         <%= markdown(subpage.content, @page) %>
     </section>
-    <% end %>
-
-    <%= render 'footer' %>
 </div>
+<% end %>
 
 <%= render 'submit' %>
+
+<% if Course.license.present? || Course.acknowledgements.present? %>
+<div id="content">
+    <%= render 'footer' %>
+</div>
+<% end %>
 
 <% end %>
