--- a/app/views/application/_alerts.html.erb
+++ b/app/views/application/_alerts.html.erb
@@ -1,7 +1,7 @@
 <% if flash[:alert] %>
 <div class="alert alert-danger alert-dismissible fade show">
 	<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-	<%= flash[:alert] %>
+	<%= sanitize flash[:alert] %>
 </div>
 <% end %>
 
