--- a/app/views/admin/site/index.html.erb
+++ b/app/views/admin/site/index.html.erb
@@ -2,6 +2,8 @@
 <h1>Site configuration</h1>
 <% end %>
 
+<%= render partial: 'version', layout: 'modal_card', locals: { title: 'Version', subtitle: nil }%>
+
 <%= render partial: 'git', layout: 'modal_card', locals: { title: 'Git', subtitle: nil }%>
 
 <%= render partial: 'email', layout: 'modal_card', locals: { title: 'E-mail', subtitle: nil } %>
