--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -10,7 +10,7 @@
 
 
 <div class="">
-    <label for="user_name">Your first and last name</label>
+    <label for="user_name" class="mb-1">Your first and last name</label>
     <%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
 </div>
 
@@ -19,11 +19,11 @@
 <% end %>
 
 <% if Schedule.where(self_register: true).count > 1 %>
-<div class="">
-    <label>Your schedule</label>
+<div class="mt-3">
+    <label class="mb-1">Your schedule</label>
 
     <% Schedule.where(self_register: true).each do |schedule| %>
-    <div class="form-check">
+    <div class="form-check ps-1">
         <input type="radio" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
         <label for="optionsRadios<%= schedule.id %>">
             <%= schedule.description || schedule.name %>
