--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -65,4 +65,13 @@
 
 <% end%>
 
-<%= menu_link 'Logout', session_logout_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
+<% if !authenticated? %>
+<% if Auth::OpenController.available? %>
+<%= menu_link 'Login via UvA', auth_open_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
+<% end %>
+<% if Auth::MailController.available? %>
+<%= menu_link 'Login via mail', auth_mail_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
+<% end %>
+<% else %>
+<%= menu_link 'Logout', auth_session_logout_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
+<% end %>
