forced submit filenames

--- a/app/views/grading/_file_panels.html.erb
+++ b/app/views/grading/_file_panels.html.erb
@@ -1,5 +1,5 @@
 <% @files.each do |filename, contents| %>
-<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">
+<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="show-file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">
 	<%= present_file_contents(filename, contents) %>
 </div>
 <% end %>
