--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,10 +37,10 @@
 	</div>
 
 	<div class="tab-pane show" id="submit-attendance" role="tabpanel" aria-labelledby="submit-attendance-tab">
-        <p>Last seen: <%= @student.last_seen_at.to_fs(:long) %></p>
+		<p>Last seen: <%= @student.last_seen_at.to_fs(:long) %></p>
 		<div class="barchart d-flex align-items-end" style="height:8rem;">
 			<% @attend.each do |dat, count| %>
-			<div class="progress-bar bg-success" style="width:1rem; height: <%= count/12.0*100 %>%"><div style="font-size: 0.25rem"><%= dat %></div></div>
+			<div class="progress-bar bg-success justify-content-end" style="width:1rem; height: <%= count/12.0*100+10 %>%"><div style="font-size: 0.25rem; white-space:normal;"><%= dat %></div></div>
 			<% end %>
 		</div>
 	</div>
