--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,9 @@
 		<p>Last seen: <%= @student.last_seen_at.to_fs(:long) %></p>
 		<div class="barchart d-flex align-items-end" style="height:8rem;">
 			<% @attend.each do |dat, count| %>
-			<div class="progress-bar bg-success justify-content-end" style="width:1rem; height: <%= count/12.0*100+1 %>%"><div style="font-size: 0.25rem;"><%= dat %></div></div>
+			<a href="#" data-bs-toggle="tooltip" data-bs-title="<%= dat %>" class="progress-bar bg-success justify-content-end" style="width:1rem; height: <%= count/12.0*100+1 %>%">
+				<div style="font-size: 0.25rem;"><%= dat.split(" ").first %></div>
+			</a>
 			<% end %>
 		</div>
 	</div>
@@ -53,6 +55,10 @@
 	</div>
 
 </div>
+
+<script type="text/javascript" charset="utf-8">
+	enableTooltips();
+</script>
 
 <% content_for :footer do %>
 	<%= form_with model: @note, html: { class: 'w-100' } do |f| %>
