--- a/app/views/page/_submit.html.erb
+++ b/app/views/page/_submit.html.erb
@@ -9,6 +9,7 @@
 
         <% if @submit.grade_public? && !@submit.may_be_resubmitted? # grade has been published %>
         <p><%= bootstrap_icon 'check2-all' %> <%= t 'submit.submit_is_graded' %></p>
+        <% elsif !@submit.may_be_resubmitted? # pset is locked for this user%>
         <% elsif current_user.can_submit? %>
         <p><%= bootstrap_icon 'check2-all' %> <%= t 'submit.until_deadline_new_version' %></p>
         <% end %>
@@ -21,7 +22,12 @@
     <% elsif not current_user.can_submit? %>
     <p><strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.cant_not_logged_in' %></strong></p>
     <% elsif not @allow_submit %>
-    <% if !@submit.grade_public?%>
+    <% if @submit.locked %>
+    <p>
+        <strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.submit_locked' %></strong>
+        <%= t 'submit.submit_locked_explainer' %>
+    </p>
+    <% elsif !@submit.grade_public? %>
     <p>
         <strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.cant_resubmit' %></strong>
         <%= t 'submit.cant_resubmit_explainer' %>
