--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
 	</div>
 
 	<div class="tab-pane show" id="submit-attendance" role="tabpanel" aria-labelledby="submit-attendance-tab">
-		<p>Last seen: <%= @student.last_seen_at.to_fs(:long) %></p>
+		<p>Last seen: <%= @student.last_seen_at&.to_fs(:long) %></p>
 		<div class="barchart d-flex align-items-end" style="height:8rem;">
 			<% @attend.each do |dat, count| %>
 			<a href="#" data-bs-toggle="tooltip" data-bs-title="<%= dat %>" class="progress-bar bg-success justify-content-end" style="width:1rem; height: <%= count/12.0*100+1 %>%">
