--- a/app/views/submissions/_grades_overview.html.erb
+++ b/app/views/submissions/_grades_overview.html.erb
@@ -42,7 +42,7 @@
 				<%# Else, print a dash. %>
 				<% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_calculated'] %>
 				<% if definition['type'] == 'points' %>
-				<td><%= @grades_by_pset[submit].assigned_grade.to_i %></td>
+				<td><%= to_i_if_whole(@grades_by_pset[submit].assigned_grade) %></td>
 				<% else%>
 				<td><%= translate_grade(@grades_by_pset[submit].assigned_grade) %></td>
 				<% end %>
