--- a/app/views/auth/mail/code.html.erb
+++ b/app/views/auth/mail/code.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(auth_mail_validate_path, style: 'width: 600px', class: 'mx-auto m-5 bg-white p-4 rounded shadow') do |form| %>
+<%= form_tag(auth_mail_validate_path, class: 'mx-auto m-5 p-4') do |form| %>
 
 <h1 class="text-center">
     <%= bootstrap_icon 'file-earmark-binary', width: 60, height: 60 %>
