--- a/app/views/hands/hands/new.html.erb
+++ b/app/views/hands/hands/new.html.erb
@@ -14,7 +14,7 @@
 
 <%= form_tag(hands_path(user_id: @user.id)) do %>
 
-<%= render partial: 'form' %>
+<%#= render partial: 'form' %>
 		
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
 	<button type="submit" class="btn btn-primary">Mark as done</button>
