--- a/app/views/hands/raises/_location.html.erb
+++ b/app/views/hands/raises/_location.html.erb
@@ -1,9 +1,15 @@
-<div style="text-align: center; padding:1em; padding-bottom:0.25em;">
-	<% assist = @assist_available.shuffle.first %>
-	<h3 style="margin-bottom:0.75em;"><%= @greeting %>!<br> What's your location?</h3>
-	<p>Entering your location details ensures that we can find you if we'd like to discuss something.</p>
-	<%= form_tag(set_location_hands_raise_path, method: :patch, remote: true) do %>
-		<input type="text" name="location" class="form-control" required placeholder="" style="margin-top:0.5em">
-		<button id="loc-button" data-loading-text="Just a sec..." type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-sm btn-warning" name="how" value="hands">That's my location!</button>
-	<% end %>
+<div class="cards">
+    <div class="message big">
+        <p>
+            <%= @greeting %>!<br><%= t('hands.lets_check_you_in') %>
+        </p>
+    </div>
+    <%= form_tag(set_location_hands_raise_path, method: :patch, remote: true, id: 'location-form') do %>
+    <label for="location-text-field">
+        <!-- <strong class="fs-5">Location</strong><br> -->
+        <%= t('hands.entering_location', location_type: Settings.hands_location_type) %>:
+    </label>
+    <input id="location-text-field" type="text" name="location" class="form-control" required autofocus placeholder="<%= Settings.hands_location_type %>">
+    <button id="loc-button" data-loading-text="Just a sec..." type="submit" class="btn btn-warning" name="how" value="hands"><%= t('hands.save_my_location') %></button>
+    <% end %>
 </div>
