--- a/app/views/hands/raises/location.js.erb
+++ b/app/views/hands/raises/location.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('ama').innerHTML = "<%= j(render 'location') %>";
+document.getElementById('assistance').innerHTML = "<%= j(render 'location') %>";
