--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,8 @@ $link-decoration: none;
 @import "includes/modal";
 @import "includes/grading";
 @import "includes/toc";
+@import "includes/miniapp";
+@import "includes/assistance";
 
 @import "includes/theme";
 @import "includes/fonts";
