--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -2,6 +2,7 @@
 
 <% if current_schedule.present? %>
 <%= menu_group current_schedule.name do %>
+	<%= menu_link 'Assistance', assistance_index_path, icon: 'columns' %>
 	<%= menu_link 'Overview', overviews_path, icon: 'columns' %>
 	<%= menu_link 'Notes', notes_path, icon: 'journal-bookmark' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
