--- a/app/views/hands/hands/_hand.html.erb
+++ b/app/views/hands/hands/_hand.html.erb
@@ -1,8 +1,16 @@
-<%= hand.user.name %> / <strong><%= hand.subject %></strong>
-<% if should_show_groups_in_hands? && hand.user.group %>
-<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(hand.user.group.name) %>"><%= hand.user.group.name %></span>
-<% elsif hand.user.schedule %>
-<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(hand.user.schedule.name) %>"><%= hand.user.schedule.name %></span>
+<% if Schedule.many? || Schedule.first.groups.many? %>
+<%= simple_format(hand.user.full_designation, { class: 'float-end badge bg-secondary', style: get_colors_for_text(hand.user.full_designation) }, wrapper_tag: 'span') %>
 <% end %>
-<br>
-<small>in line since <%= minutes_ago(hand.created_at) %> minutes <% if Settings.hands_location && !Settings.hands_link %> @ <%= hand.location %><% end %></small>
+<h5><strong><%= hand.user.name %></strong></h5>
+<% if Settings.hands_link && @hand.location.present? %>
+<%= link_to @hand.location, @hand.location || "no location", target: "_blank" %>
+<% end %>
+<p>
+    <small>
+        in line since <%= minutes_ago(hand.created_at) %> minutes 
+        <% if Settings.hands_location && !Settings.hands_link %>
+            @ <%= hand.location %>
+        <% end %>
+    </small>
+</p>
+<strong><%= hand.subject %></strong>&mdash;<%= hand.help_question %>
