--- a/app/views/hands/hands/index.html.erb
+++ b/app/views/hands/hands/index.html.erb
@@ -1,8 +1,10 @@
 <% if not @my_hands.any? || @hands.any? || (Settings.hands_show_non_questions && @long_time_users.any?) %>
-<h5 class="text-center my-5">No requests. Go and find<br> a student to talk to! ❤️</h5>
-<% end %>
+<div class="message">
+    <h5>No requests. Go and find<br> a student to talk to! ❤️</h5>
+</div>
+<% else %>
 
-<div class="list-group my-3">
+<div class="list-group">
 
 	<% if @my_hands.any? %>
 	<% @my_hands.each do |hand| %>
@@ -24,7 +26,7 @@
 	<% @long_time_users.each do |user| %>
 	<%= link_to(new_hand_path(user_id: user.id), class: 'list-group-item') do %>
 	<%= user.name %>
-	<% if (!Schedule.many? || Settings.hands_groups) && user.group %>
+	<% if (Schedule.many? || Schedule.first.groups.many?) && user.group %>
 	<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(user.group.name) %>"><%= user.group.name %></span>
 	<% elsif user.schedule %>
 	<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(user.schedule.name) %>"><%= user.schedule.name %></span>
@@ -43,3 +45,5 @@
 	<% end %>
 
 </div>
+
+<% end %>
