--- a/app/views/hands/raises/_line.html.erb
+++ b/app/views/hands/raises/_line.html.erb
@@ -1,4 +1,8 @@
-<div style="text-align: center; padding:1em;">
-	<h5 style="margin-top:0"><%= t "hands.in_line" %></h5>
-	<img id="waiting-gif" src="" class="mx-auto my-3" style="display: block; max-width: 250px; max-height: 180px;">
+<div class="cards">
+    <img id="waiting-gif" src="">
+    <div class="message text-center">
+        <p>
+            <%= t "hands.in_line" %>
+        </p>
+    </div>
 </div>
