--- a/app/views/hands/raises/_waiting.html.erb
+++ b/app/views/hands/raises/_waiting.html.erb
@@ -1,5 +1,7 @@
-<div style="text-align: center; padding:1em;">
-	<h5 style="margin-top:0"><%= t "hands.you_are_number_1_in_line", number: @number %></h5>
-	<img id="waiting-gif" src="" class="mx-auto my-3" style="display: block; max-width: 250px; max-height: 180px;">
-	<%= link_to t("hands.cancel_request"), hands_raise_path, method: :delete, remote: true, class: 'btn btn-warning' %>
+<div class="cards">
+    <img id="waiting-gif" src="">
+    <div class="message text-center">
+        <p><%= t "hands.you_are_number_1_in_line", number: @number %></p>
+        <%= link_to t("hands.cancel_request"), hands_raise_path, method: :delete, remote: true, class: 'btn' %>
+    </div>
 </div>
