use mini-app for login sequence

--- a/app/assets/stylesheets/includes/miniapp.scss
+++ b/app/assets/stylesheets/includes/miniapp.scss
@@ -54,7 +54,7 @@ body.mini-app
 {
     flex: 1 1 auto;
 
-    a.btn, button
+    .btn, button
     {
         border-radius: 50px !important;
     }
