--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,43 +1,42 @@
-<%= form_tag '/profile/save', style: 'width: 600px', class: 'form-horizontal mx-auto m-5 bg-white p-4 rounded shadow' do |f| %>
+<% @page_name = "Register your details" %>
 
-<h1 class="text-center mb-5">
-    <%= bootstrap_icon 'person-lines-fill', width: 60, height: 60 %>
-    Register your details
-</h1>
-<!-- <p class="text-center">
-    You must complete this profile to be able to start the course.
-</p> -->
+<div class="cards">
 
+    <%= form_tag '/profile/save', class: 'mini-app-body d-flex justify-content-between flex-column' do |f| %>
 
-<div class="">
-    <label for="user_name" class="mb-1">Your first and last name</label>
-    <%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
-</div>
+    <div></div>
 
-<% if @user %>
-<%= @user.errors.full_messages.join "," %>
-<% end %>
-
-<% if Schedule.where(self_register: true).count > 1 %>
-<div class="mt-3">
-    <label class="mb-1">Your schedule</label>
-
-    <% Schedule.where(self_register: true).each do |schedule| %>
-    <div class="form-check ps-1">
-        <input type="radio" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
-        <label for="optionsRadios<%= schedule.id %>">
-            <%= schedule.description || schedule.name %>
-        </label>
+    <div class="">
+        <label for="user_name" class="mb-1">Your first and last name</label>
+        <%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
     </div>
+
+    <% if @user %>
+    <%= @user.errors.full_messages.join "," %>
     <% end %>
-</div>
-<% elsif Schedule.count == 1 %>
-<%= hidden_field_tag "user[schedule_id]", Schedule.first.id %>
-<% end %>
 
-<div class="d-flex justify-content-between mt-5">
-<%= link_to 'Cancel', auth_session_logout_path, class: 'btn btn-outline-secondary', data: { turbo: "false" } %>
-<%= submit_tag 'Create Profile', class:'btn btn-primary' %>
-</div>
+    <% if Schedule.where(self_register: true).count > 1 %>
+    <div class="mt-3">
+        <label class="mb-1">Your schedule</label>
 
-<% end %>
+        <% Schedule.where(self_register: true).each do |schedule| %>
+        <div class="form-check ps-1">
+            <input type="radio" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
+            <label for="optionsRadios<%= schedule.id %>">
+                <%= schedule.description || schedule.name %>
+            </label>
+        </div>
+        <% end %>
+    </div>
+    <% elsif Schedule.count == 1 %>
+    <%= hidden_field_tag "user[schedule_id]", Schedule.first.id %>
+    <% end %>
+
+    <div class="d-flex justify-content-between">
+        <%= link_to 'Cancel', auth_session_logout_path, class: 'btn btn-outline-secondary', data: { turbo: "false" } %>
+        <%= submit_tag 'Create Profile', class:'btn btn-primary' %>
+    </div>
+
+    <% end %>
+
+</div>
