--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/browser/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/browser/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/browser/favicon-16x16.png">
+    <link rel="mask-icon" href="/browser/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="/manifest.json">
+
     <%= csrf_meta_tags %>
 
     <title><%= title %></title>
@@ -19,8 +27,6 @@
     <%= javascript_include_tag 'https://polyfill.io/v3/polyfill.min.js?features=es6' %>
     <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js', { async: true, id: 'MathJax-script' } %>
     <% end %>
-
-    <link rel="icon" type="image/png" href="/images/minor.png" />
 
     <%= yield(:meta) %>
     <%= javascript_importmap_tags %>
